Fixed Navbar jumping

--- a/Website/style.css
+++ b/Website/style.css
@@ -12,7 +12,6 @@ body {
     background-color: white;
     padding-bottom: 20%;
 }
-
 h1 {
     color: white;
 }
@@ -88,6 +87,7 @@ ul#navbar {
     overflow: hidden;
     background-color: black;
     text-align:center;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);
 } 
 li.navitem {
     display:inline;
@@ -115,7 +115,6 @@ li.navitem a {
 .button {
     display: block;
 
-    
     padding: 24px 12px;
     border: 4px solid;
     border-color: rgb(0, 195, 255);
@@ -132,6 +131,7 @@ li.navitem a {
 
 #sections {
     margin: auto;
+    
     min-width: 650px;
     max-width: 650px;
 }
